syntax = "proto3";

package dss.predef;

option java_multiple_files = true;

message Instant {
  int64 seconds = 1;
  int32 nanos = 2;
}

message OffsetDateTime {
  int64 seconds = 1;
  int32 nanos = 2;
  string zone_offset = 3;
}

message UUID {
  int64 upper_bits = 1;
  int64 lower_bits = 2;
}

message DoubleValue {
  double value = 1;
}

message FloatValue {
  float value = 1;
}

message Int64Value {
  int64 value = 1;
}

message Int32Value {
  int32 value = 1;
}

message BoolValue {
  bool value = 1;
}

message StringValue {
  string value = 1;
}

message BytesValue {
  bytes value = 1;
}
